nieuwe resource klasse.
