# src/java/resources/Leerling.java
@@ -5,22 +5,17 @@
  */
 package resources;
 
-import domain.Leerling;
-import java.net.URI;
-import java.util.List;
 import javax.enterprise.context.RequestScoped;
 import javax.persistence.EntityManager;
 import javax.persistence.PersistenceContext;
 import javax.transaction.Transactional;
 import javax.ws.rs.BadRequestException;
-import javax.ws.rs.Consumes;
 import javax.ws.rs.GET;
 import javax.ws.rs.NotFoundException;
-import javax.ws.rs.POST;
 import javax.ws.rs.Path;
+import javax.ws.rs.PathParam;
 import javax.ws.rs.Produces;
 import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
 
 /**
  *
@@ -28,30 +23,22 @@ import javax.ws.rs.core.Response;
  */
 @RequestScoped
 @Transactional(dontRollbackOn = {BadRequestException.class})
-@Path("leerlingen")
-public class Leerlingen {
+@Path("leerling")
+public class Leerling {
     
     @PersistenceContext
     private EntityManager em;
     
     @GET
     @Produces(MediaType.APPLICATION_JSON)
-    public List<Leerling> getAllLeerlingen() {
-        return em.createNamedQuery("Leerling.findAll", Leerling.class).getResultList();
+    @Path("/{inschrijvingsNr}")
+    public domain.Leerling getLeerling(@PathParam("inschrijvingsNr") String nr){
+        domain.Leerling l = em.find(domain.Leerling.class, nr);
+        
+        if (l == null)
+            throw new NotFoundException("Inschrijvingsnr bestaat niet!");
+        
+        return l;
     }
-    
-    
-    @POST
-    @Consumes(MediaType.APPLICATION_JSON)
-    public Response addLeerling(Leerling lln){
-        
-        if (em.find(Leerling.class, lln.getInschrijvingsnr())!=null)
-            throw new BadRequestException("inschrijvingsnr bestaat al!");
-        
-        em.persist(lln);
-        
-        return Response.created(URI.create("/" +lln.getInschrijvingsnr())).build();
-    }
-            
     
 }
