# web/api.yml
@@ -38,7 +38,7 @@ paths:
                 201: 
                     description: Leerling succesvol toegevoegd
 
-    /Leerling/{inschrijvingsNr}:
+    /leerling/{inschrijvingsNr}:
             get:
                 summary: Leerling met inschrijvingsNr
                 description: Geeft de leerling met het inschrijvingsnr terug
@@ -74,7 +74,7 @@ paths:
                     204:
                         description: Leerling succesvol verwijderd
                         
-    /Leerling/{inschrijvingsNr}/Eva{evaId}:
+    /leerling/{inschrijvingsNr}/eva{evaId}:
             get:
                 summary: Evaluatiemoment
                 description: Geeft de leerling met het inschrijvingsnr terug
